create form valid

--- a/frontend/static/templates/create-volume.html
+++ b/frontend/static/templates/create-volume.html
@@ -101,6 +101,8 @@
                 </ul>
             </nav>
             <!-- partial -->
+            {{$newVolume := index .Data "create-volume"}}
+
             <div class="main-panel">
                 <div class="content-wrapper">
                     <div class="row">
@@ -111,21 +113,28 @@
                                     <p class="card-description">
                                         Customize your new Portworx volume.
                                     </p>
-                                    <form method="post" action="/frontend/create-volume" class="forms-sample" novalidate>
+                                    <form method="post" action="create-volume" class="forms-sample" novalidate>
                                         <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                                         <div class="form-group">
                                             <label>Volume Name (no spaces)</label>
-                                            <input type="text" class="form-control form-control"
-                                                placeholder="portworx-volume" aria-label="Volume Name">
+                                            {{with .Form.Errors.Get "volume_name"}}
+                                                <label class="text-danger">{{.}}</label>
+                                            {{end}}
+                                            <input  name="volume_name" type="text" class="form-control" id="volume_name" placeholder="portworx-volume" value="{{$newVolume.VolumeName}}" aria-label="volume_name">
                                         </div>
                                         <div class="form-group">
                                             <label>Volume Size (in GB)</label>
-                                            <input type="text" class="form-control" placeholder="10"
-                                                aria-label="Volume Size">
+                                            {{with .Form.Errors.Get "volume_size"}}
+                                                <label class="text-danger">{{.}}</label>
+                                            {{end}}
+                                            <input name="volume_size" type="number" class="form-control" id="volume_size" value="{{$newVolume.VolumeSize}}" placeholder="10" aria-label="volume_size">
                                         </div>
                                         <div class="form-group">
                                             <label for="ioprofile">IO Profile</label>
-                                            <select class="form-control" id="ioprofile">
+                                            {{with .Form.Errors.Get "volume_io_profile"}}
+                                                <label class="text-danger">{{.}}</label>
+                                            {{end}}
+                                            <select name="volume_io_profile" class="form-control" id="volume_io_profile" value="{{$newVolume.VolumeIOProfile}}" >
                                                 <option>auto</option>
                                                 <option>db_remote</option>
                                                 <option>db</option>
@@ -135,7 +144,10 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="halevel">HA Level</label>
-                                            <select class="form-control" id="halevel">
+                                            {{with .Form.Errors.Get "volume_ha_level"}}
+                                                <label class="text-danger">{{.}}</label>
+                                            {{end}}
+                                            <select name="volume_ha_level" class="form-control" id="volume_ha_level" type="number" value="{{$newVolume.VolumeHALevel}}" >
                                                 <option>3</option>
                                                 <option>2</option>
                                                 <option>1</option>
@@ -143,21 +155,30 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="encryption">Encryption Enabled</label>
-                                            <select class="form-control" id="encryption">
+                                            {{with .Form.Errors.Get "volume_encrypted"}}
+                                                <label class="text-danger">{{.}}</label>
+                                            {{end}}
+                                            <select name="volume_encrypted" class="form-control" type="checkbox" id="volume_encrypted" value="{{$newVolume.VolumeEncrypted}}" checked>
                                                 <option>false</option>
                                                 <option>true</option>
                                             </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="encryption">Sharedv4 Enabled</label>
-                                            <select class="form-control" id="encryption">
+                                            {{with .Form.Errors.Get "volume_sharedv4"}}
+                                                <label class="text-danger">{{.}}</label>
+                                            {{end}}
+                                            <select name="volume_sharedv4" class="form-control" type="checkbox" id="volume_sharedv4" value="{{$newVolume.VolumeSharedv4}}" checked>
                                                 <option>false</option>
                                                 <option>true</option>
                                             </select>
                                         </div>
                                         <div class="form-group">
                                             <label for="encryption">Volume Nodiscard</label>
-                                            <select class="form-control" id="encryption">
+                                            {{with .Form.Errors.Get "volume_no_discard"}}
+                                                <label class="text-danger">{{.}}</label>
+                                            {{end}}
+                                            <select name="volume_no_discard" class="form-control" type="checkbox" id="volume_no_discard" value="{{$newVolume.VolumeNoDiscard}}" checked>
                                                 <option>true</option>
                                                 <option>false</option>
                                             </select>
