--- a/frontend/static/templates/create-volume.html
+++ b/frontend/static/templates/create-volume.html
@@ -62,7 +62,7 @@
                         <div class="collapse" id="ui-basic">
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link"
-                                        href="./pages/ui-features/buttons.html">Buttons</a></li>
+                                        href="">Create Volume</a></li>
                                 <li class="nav-item"> <a class="nav-link"
                                         href="./pages/ui-features/typography.html">Typography</a></li>
                             </ul>
