--- a/frontend/static/templates/volume-specific.html
+++ b/frontend/static/templates/volume-specific.html
@@ -197,7 +197,7 @@
             </a>
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../pages/ui-features/buttons.html">Buttons</a></li>
+                <li class="nav-item"> <a class="nav-link" href="../create-volume">Create Volume</a></li>
                 <li class="nav-item"> <a class="nav-link" href="../pages/ui-features/typography.html">Typography</a></li>
               </ul>
             </div>
