--- a/frontend/static/templates/node-specific.html
+++ b/frontend/static/templates/node-specific.html
@@ -199,7 +199,6 @@
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
                 <li class="nav-item"> <a class="nav-link" href="../create-volume">Create Volume</a></li>
-                <li class="nav-item"> <a class="nav-link" href="../pages/ui-features/typography.html">Typography</a>
                 </li>
               </ul>
             </div>
@@ -229,7 +228,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../documentation/documentation.html">
+            <a class="nav-link" href="../documentation/documentation">
               <i class="ti-write menu-icon"></i>
               <span class="menu-title">Documentation</span>
             </a>
