create repository.go with all the Repository functions

--- a/frontend/static/templates/volume-specific.html
+++ b/frontend/static/templates/volume-specific.html
@@ -226,7 +226,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../documentation/documentation">
+            <a class="nav-link" href="../documentation">
               <i class="ti-write menu-icon"></i>
               <span class="menu-title">Documentation</span>
             </a>
