--- a/frontend/static/templates/index.page.html
+++ b/frontend/static/templates/index.page.html
@@ -2,181 +2,117 @@
 
   {{define "content"}}
 
+    {{ $clusterInfo := .JsonClusterInfo }}
+    {{ $clusterCapacity := .JsonClusterCapacity }}
+
       <div class="main-panel">
         <div class="content-wrapper">
           <div class="row">
-            <div class="col-lg-12 grid-margin stretch-card">
-              <div class="card">
+            <div class="col-md-12 grid-margin stretch-card">
+              <div class="card position-relative">
                 <div class="card-body">
-                  <h4 class="card-title">Striped Table</h4>
-                  <p class="card-description">
-                    Add class <code>.table-striped</code>
-                  </p>
-                  <div class="table-responsive">
-                    <table class="table table-striped">
-                      <thead>
-                        <tr>
-                          <th>
-                            User
-                          </th>
-                          <th>
-                            First name
-                          </th>
-                          <th>
-                            Progress
-                          </th>
-                          <th>
-                            Amount
-                          </th>
-                          <th>
-                            Deadline
-                          </th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td class="py-1">
-                            <img src="../../images/faces/face1.jpg" alt="image"/>
-                          </td>
-                          <td>
-                            Herman Beck
-                          </td>
-                          <td>
-                            <div class="progress">
-                              <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td>
-                            $ 77.99
-                          </td>
-                          <td>
-                            May 15, 2015
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="py-1">
-                            <img src="../../images/faces/face2.jpg" alt="image"/>
-                          </td>
-                          <td>
-                            Messsy Adam
-                          </td>
-                          <td>
-                            <div class="progress">
-                              <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td>
-                            $245.30
-                          </td>
-                          <td>
-                            July 1, 2015
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="py-1">
-                            <img src="../../images/faces/face3.jpg" alt="image"/>
-                          </td>
-                          <td>
-                            John Richards
-                          </td>
-                          <td>
-                            <div class="progress">
-                              <div class="progress-bar bg-warning" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td>
-                            $138.00
-                          </td>
-                          <td>
-                            Apr 12, 2015
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="py-1">
-                            <img src="../../images/faces/face4.jpg" alt="image"/>
-                          </td>
-                          <td>
-                            Peter Meggik
-                          </td>
-                          <td>
-                            <div class="progress">
-                              <div class="progress-bar bg-primary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td>
-                            $ 77.99
-                          </td>
-                          <td>
-                            May 15, 2015
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="py-1">
-                            <img src="../../images/faces/face5.jpg" alt="image"/>
-                          </td>
-                          <td>
-                            Edward
-                          </td>
-                          <td>
-                            <div class="progress">
-                              <div class="progress-bar bg-danger" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td>
-                            $ 160.25
-                          </td>
-                          <td>
-                            May 03, 2015
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="py-1">
-                            <img src="../../images/faces/face6.jpg" alt="image"/>
-                          </td>
-                          <td>
-                            John Doe
-                          </td>
-                          <td>
-                            <div class="progress">
-                              <div class="progress-bar bg-info" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td>
-                            $ 123.21
-                          </td>
-                          <td>
-                            April 05, 2015
-                          </td>
-                        </tr>
-                        <tr>
-                          <td class="py-1">
-                            <img src="../../images/faces/face7.jpg" alt="image"/>
-                          </td>
-                          <td>
-                            Henry Tom
-                          </td>
-                          <td>
-                            <div class="progress">
-                              <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td>
-                            $ 150.00
-                          </td>
-                          <td>
-                            June 16, 2015
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
+                  <p class="card-title">{{ $clusterInfo.ClusterName }}</p>
+                  <div class="row">
+                    <div class="col-md-12 col-xl-3 d-flex flex-column justify-content-center">
+                      <div class="ml-xl-4">
+                        <h6 class="font-weight-light mb-xl-4">Cluster Name:</h6>
+                        <h6 class="font-weight-light mb-xl-3">{{ $clusterInfo.ClusterName }}</h6>
+                      </div>
+                      <div class="ml-xl-4">
+                        <h6 class="font-weight-light mb-xl-4">Cluster UUID:</h6>
+                        <h6 class="font-weight-light mb-xl-3">{{ $clusterInfo.ClusterUUID }}</h6>
+                      </div>
+                      <div>
+                        <p class="text-muted mb-2 mb-xl-0">This is the current information of your Portworx cluster.</p>
+                      </div>
+                    </div>
+                    <div class="col-md-12 col-xl-9">
+                      <div class="row">
+                        <div class="col-md-6 mt-3 col-xl-5">
+                          <canvas id="node-chart"></canvas>
+                          <div id="node-legend"></div>
+                        </div>
+                        <div class="col-md-6 col-xl-7">
+                          <div class="table-responsive mb-3 mb-md-0">
+                            <table class="table table-borderless report-table">
+                              <tr>
+                                <td class="font-weight-bold mb-0 w-50 px-0">Cluster Status:</td>
+                                <td class="w-50 px-0">
+                                  <h5 class="font-weight-normal mb-0" id="check-cluster-status" title="{{ $clusterInfo.ClusterStatus }}">
+                                  </h5>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td class="font-weight-bold mb-0 w-50 px-0">Cluster Total Capacity:</td>
+                                <td class="w-50 px-0">
+                                  <h5 class="font-weight-normal mb-0">{{divide $clusterCapacity.ClusterCapacity 1024}} GB</h5>
+                                </td>
+                              </tr>
+                            </table>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-  {{end}}
 
-  {{define "js"}}
+  {{ end }}
 
-  {{end}}
+  {{ define "js" }}
+
+    <script>
+      var usagePercent = "{{.JsonClusterCapacity.ClusterPercentUsed}}";
+      var availablePercent = "{{.JsonClusterCapacity.ClusterPercentAvailable}}";
+      var usage = "{{.JsonClusterCapacity.ClusterUsed}}";
+      var available = "{{.JsonClusterCapacity.ClusterAvailable}}";
+      var total = "{{.JsonClusterCapacity.ClusterCapacity}}";
+    </script>
+
+    <script src="/frontend/static/js/dashboard.js"> </script>
+
+    <script >
+
+      var element = document.getElementById("check-cluster-status");
+
+        if(element.title == "STATUS_OK") {
+
+          let btn = document.createElement("button");
+          btn.innerHTML = "Cluster Up";
+          btn.type = "button";
+          btn.name = "formBtn";
+          btn.classList = "btn btn-inverse-success btn-fw";
+          element.appendChild(btn);
+
+          console.log("Cluster Up");
+
+        } else if (element.value == "STATUS_STORAGE_DOWN" || element.value == "STATUS_ERROR" || element.value == "STATUS_DECOMMISSION" || element.value == "STATUS_OFFLINE"  || element.value == "STATUS_NONE") {
+          
+          let btn = document.createElement("button");
+          btn.innerHTML = "Cluster Down";
+          btn.type = "button";
+          btn.name = "formBtn";
+          btn.classList = "btn btn-inverse-danger btn-fw";
+          element.appendChild(btn);
+
+          console.log("Cluster Down");
+
+        } else {
+
+          let btn = document.createElement("button");
+          btn.innerHTML = "Cluster Warning";
+          btn.type = "button";
+          btn.name = "formBtn";
+          btn.classList = "btn btn-inverse-warning btn-fw";
+          element.appendChild(btn);
+
+          console.log("Cluster Warning");
+
+      }
+
+    </script>
+
+ {{end}}
