--- a/frontend/static/templates/nodes.page.html
+++ b/frontend/static/templates/nodes.page.html
@@ -12,7 +12,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Nodes</h4>
                   <div class="table-responsive">
-                    <table class="table table-striped">
+                    <table class="table table-striped" id="nodes-table">
                       <thead>
                         <tr>
                           <th>
@@ -40,7 +40,7 @@
                           <td>
                             <a href="node/{{ $node.NodeID }}">{{ $node.NodeID }} </a>
                           </td>
-                          <td>
+                          <td class="sort-node" >
                             {{ $node.NodeName }}
                           </td>
                           <td class="check-node" title="{{$node.NodeStatus}}">
@@ -132,7 +132,4 @@
 
   </script>
 
-  <!-- Custom js for this page-->
-  <script src="/frontend/static/templates/js/dashboard.js"> </script>
-  <!-- End custom js for this page-->
   {{ end }}
