--- a/frontend/static/templates/volumes.page.html
+++ b/frontend/static/templates/volumes.page.html
@@ -1,5 +1,10 @@
 {{template "base" .}}
 
+  {{ define "css"}}
+
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+
+  {{ end }}
   {{define "content"}}
 
       {{ $AllVolumesInfo := .JsonAllVolumesInfo.AllVolumesInfo }}
@@ -12,7 +17,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Volumes</h4>
                   <div class="table-responsive">
-                    <table class="table table-striped">
+                    <table class="table table-striped" id="volumes" style="width:100%">
                       <thead>
                         <tr>
                           <th>
@@ -123,6 +128,20 @@
 
       } 
     }
+  </script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+  <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
+
+  <script>
+  
+      $(document).ready(function() {
+        $('#volumes').DataTable( {
+            responsive: true,
+            "pageLength": 10,
+        } );
+    } );
   </script>
 
   {{end}}
