--- a/frontend/static/templates/base-template.layout.html
+++ b/frontend/static/templates/base-template.layout.html
@@ -10,6 +10,17 @@
   <!-- plugins:css -->
   <link rel="stylesheet" href="/frontend/static/vendors/ti-icons/css/themify-icons.css">
   <link rel="stylesheet" href="/frontend/static/vendors/base/vendor.bundle.base.css">
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+  <style>
+        p {
+            color: red,
+        }
+
+        p {
+            color: green,
+        }
+  </style>
+
   <!-- endinject -->
   <!-- plugin css for this page -->
   <!-- End plugin css for this page -->
@@ -23,6 +34,9 @@
 </head>
 
 <body>
+
+  <script src="https://unpkg.com/notie"></script>
+  <script src="/frontend/static/js/custom-scripts.js"></script>
 
   <div class="container-scroller">
     <div class="row p-0 m-0 proBanner" id="proBanner">
@@ -250,17 +264,24 @@
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
+
+  
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="/frontend/static/vendors/base/vendor.bundle.base.js"></script>
+
+
   <!-- endinject -->
   <!-- Plugin js for this page-->
   <script src="/frontend/static/vendors/chart.js/Chart.min.js"></script>
   <script src="/frontend/static/js/jquery.cookie.js" type="text/javascript"></script>
+
   <!-- End plugin js for this page-->
   <!-- inject:js -->
   <script src="/frontend/static/js/off-canvas.js"></script>
   <script src="/frontend/static/js/hoverable-collapse.js"></script>
   <script src="/frontend/static/js/template.js"></script>
   <script src="/frontend/static/js/todolist.js"></script>
+
   <!-- endinject -->
   {{block "js" .}}
 
